# subnet-MoE

./: .gitignore  chain_status_check.ipynb  download_daily_subnetinfo.py  pyproject.toml  requirements.txt  taxcheck.ipynb
expert_groups/exp_math/: dataset.py
mycelia/: config.py  settings.py
mycelia/demo/: checkpoint.ipynb  dump.ipynb  model.ipynb  sn_owner.ipynb
mycelia/miner/: README.md  checkpoint.py  client.py  client_demo.ipynb  demo.ipynb  evaluate.py  model_io.py  run_miner.sh  service.py  train.ipynb  train.py  train_helper.py
mycelia/shared/: app_logging.py  blockchain.py  chain.py  checkpoint.py  client.py  config.py  cycle.py  dataloader.py  datasets.py  evaluate.py  expert_manager.py  helper.py  logging.py  messaging.py  metrics.py  model.py  modeling_moe.py  schema.py  scoring.py  server.py  weights.py
mycelia/shared/modeling/: configuration_deepseek.py  custom_qwen3_next.py  modeling_deepseek.py  modeling_mycelia.py  mycelia.py
mycelia/sn_owner/: cycle.py  phase_service.py
mycelia/validator/: README.md  aggregator.py  api.py  evaluator.py  inter_validator_connection.py  round_manager.py  run.py  server.py  service.py
tokenomics/: chain_status_check.ipynb  download_daily_subnetinfo.py  pool.py  token_plan.ipynb  tokenomics_check.ipynb
